Updated some profile page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
   <a href="Assignment-Coding%20Blocks%20Form/index.html">Admission Form</a>
+  <a href="Assignment-Profile%20Page/index.html">Profile Page</a>
+
 
 </body>
 </html>
