--- a/Assignment-Coding Blocks Form/index.html
+++ b/Assignment-Coding Blocks Form/index.html
@@ -51,7 +51,7 @@
    <div class="back">
        <div class="container mar">
            <div class="row">
-               <div class="col-xl-3 col-md-5 text-center">
+               <div class="col-xl-3 text-center">
                    <div class="row">
                        <div class="col"><img src="assets/registration_bg.svg" class="img-fluid"></div>
                    </div>
@@ -59,7 +59,7 @@
                        <div class="col"><h1 class="display-5 align-items-center">Register</h1></div>
                    </div>
                </div>
-               <div class="col-xl-7 col-md-7">
+               <div class="col-xl-7 ">
                    <h1 class="display-4 align-items-center">Admission Form</h1>
                    <form>
                        <div class="form-group">
