--- a/Assignment-Coding Blocks Form/index.html
+++ b/Assignment-Coding Blocks Form/index.html
@@ -12,92 +12,95 @@
 
 </head>
 <body>
-   <nav class="navbar navbar-expand-lg navbar-light">
-       <a class="navbar-brand" href="#"><img src="https://codingblocks.com/assets/images/cb/cblogo.png" width="110px" height="60px"> </a>
-       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" ><span class="navbar-toggler-icon"></span> </button>
-       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-           <ul class="navbar-nav">
-               <li class="nav-item">
-                   <a class="nav-link" href="#">Campus Ambassadors <span class="sr-only">(current)</span></a>
-               </li>
-               <li class="nav-item dropdown">
-                   <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
-                   <div class="dropdown-menu">
-                       <a class="dropdown-item" href="#">Action</a>
-                       <a class="dropdown-item" href="#">Another action</a>
-                       <a class="dropdown-item" href="#">Something else here</a>
-                       <div class="dropdown-divider"></div>
-                       <a class="dropdown-item" href="#">Separated link</a>
-                   </div>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="#">Classroom Course</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="#">Online Courses</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="#">Resources</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="#">Competition</a>
-               </li>
-               <li class="nav-item">
-                   <a class="nav-link" href="#">Contact Us</a>
-               </li>
-           </ul>
-       </div>
-   </nav>
-   <div class="back">
-       <div class="container mar">
-           <div class="row">
-               <div class="col-xl-3 text-center">
-                   <div class="row">
-                       <div class="col"><img src="assets/registration_bg.svg" class="img-fluid"></div>
-                   </div>
-                   <div class="row">
-                       <div class="col"><h1 class="display-5 align-items-center">Register</h1></div>
-                   </div>
-               </div>
-               <div class="col-xl-7 ">
-                   <h1 class="display-4 align-items-center">Admission Form</h1>
-                   <form>
-                       <div class="form-group">
-                           <div class="row">
-                               <div class="col-md-6">
-                                   <label>First Name</label>
-                                   <input type="text" class="form-control" placeholder="First Name">
-                               </div>
-                               <div class="col-md-6">
-                                   <label>Last Name</label>
-                                   <input type="text" class="form-control" placeholder="Last Name">
-                               </div>
-                           </div>
-                           <div class="form-group">
-                               <label for="exampleInputEmail1">Email address</label>
-                               <input type="email" class="form-control" id="exampleInputEmail1"placeholder="Enter email">
-                               <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                           </div>
-                           <div class="form-group">
-                               <label for="exampleInputPassword1">Password</label>
-                               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                           </div>
-                           <div class="form-group">
-                               <label for="exampleInputPassword1">Confirm Password</label>
-                               <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password">
-                           </div>
-                           <div class="form-row text-right">
-                               <div class="col-12">
-                                   <a href="page2.html" class="text-white btn btn-primary">Next</a>
-                               </div>
-                           </div>
-                       </div>
-                   </form>
+<div class="container">
+    <nav class="navbar navbar-expand-xl navbar-light">
+        <a class="navbar-brand" href="#"><img src="https://codingblocks.com/assets/images/cb/cblogo.png" width="110px" height="60px"> </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" ><span class="navbar-toggler-icon"></span> </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Campus Ambassadors <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About Us</a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Separated link</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Classroom Course</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Online Courses</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Resources</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Competition</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact Us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="back">
+        <div class="container mar">
+            <div class="row">
+                <div class="col-xl-3 text-center">
+                    <div class="row">
+                        <div class="col"><img src="assets/registration_bg.svg" class="img-fluid"></div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><h1 class="display-5 align-items-center">Register</h1></div>
+                    </div>
+                </div>
+                <div class="col-xl-7 ">
+                    <h1 class="display-4 align-items-center">Admission Form</h1>
+                    <form>
+                        <div class="form-group">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <label>First Name</label>
+                                    <input type="text" class="form-control" placeholder="First Name">
+                                </div>
+                                <div class="col-md-6">
+                                    <label>Last Name</label>
+                                    <input type="text" class="form-control" placeholder="Last Name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1"placeholder="Enter email">
+                                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Confirm Password</label>
+                                <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password">
+                            </div>
+                            <div class="form-row text-right">
+                                <div class="col-12">
+                                    <a href="page2.html" class="text-white btn btn-primary">Next</a>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
 
-               </div>
-           </div>
-       </div>
-   </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
 
