--- a/Assignment-Profile Page/index.html
+++ b/Assignment-Profile Page/index.html
@@ -18,21 +18,105 @@
 </head>
 
 <body>
-<div class="container" id="mainheader">
-    <div class="row no-gutters">
-        <div class="col-md-3">
-            <img src="assets/img.jpeg"/>
-        </div>
-        <div class="col-md-9">
-            <div class="d-flex flex-column">
-                <div class="d-flex flex-row align-content-between bg-secondary">
-                    <h2 class="display-4 pl-4 text-white">Hitesh Rexwal</h2>
-
+<div class="container">
+    <header id="mainheader">
+        <div class="row no-gutters">
+            <div class="col-lg-3 col-md-4">
+                <img src="assets/img.jpeg"/>
+            </div>
+            <div class=" col-lg-9 col-md-8">
+                <div class="d-flex flex-column">
+                    <div class="d-flex flex-row justify-content-between align-items-center bg-secondary">
+                        <h2 class="display-4 p-4 text-white">Hitesh Rexwal</h2>
+                        <div class="d-none d-md-block">
+                            <a href="https://twitter.com" class="text-white">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="https://github.com" class="text-white">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="https://facebook.com" class="text-white">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                        </div>
+                        <div class="pr-2">
+                            <a href="https://instagram.com" class="text-white">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row bg-dark text-white p-4">Software Engineer</div>
+                    <div class="d-flex flex-row align-items-stretch text-center text-white">
+                        <div class="port-item p-4 bg-primary justify-content-center" data-toggle="collapse" data-target="#home">
+                            <i class="fas fa-home fa-2x d-block"></i>
+                            <span class="d-none d-sm-block">Home</span>
+                        </div>
+                        <div class="port-item p-4 bg-success" data-toggle="collapse" data-target="#resume">
+                            <i class="fas fa-graduation-cap fa-2x d-block"></i>
+                            <span class="d-none d-sm-block">Resume</span>
+                        </div>
+                        <div class="port-item p-4 bg-warning" data-toggle="collapse" data-target="#work">
+                            <i class="fas fa-folder-open fa-2x d-block"></i>
+                            <span class="d-none d-sm-block">Work</span>
+                        </div>
+                        <div class="port-item p-4 bg-danger" data-toggle="collapse" data-target="#contact">
+                            <i class="fas fa-envelope fa-2x d-block"></i>
+                            <span class="d-none d-sm-block">Contact</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="d-flex flex-row bg-dark text-white p-3">Software Engineer</div>
+            </div>
+        </div>
+    </header>
+
+    <div id="home" class="collapse show">
+        <div class="card text-white bg-primary card-body">
+            <h5 class="card-title text-center">Welcome to my Page</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="card bg-light card-body">
+            <h4 class="card-title">My skills</h4>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="mt-3">HTML5</h5>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+            </div>
+            <h5 class="mt-3">CSS3</h5>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
+            </div>
+            <h5 class="mt-3">Javascript</h5>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 30%"></div>
+            </div>
+            <h5 class="mt-3">Android</h5>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+            </div>
+            <h5 class="mt-3">C++</h5>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 80%"></div>
+            </div>
+            <h5 class="mt-3">Core Java</h5>
+            <div class="progress">
+                <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 60%"></div>
             </div>
         </div>
     </div>
+    <footer id="mainfooter" class="p-4 bg-dark text-white">
+        <div class="row">
+            <div class="col-md-6">
+                <a href="#" class="btn btn-outline-light">
+                    <i class="fas fa-cloud"></i>Resume Download
+                </a>
+            </div>
+        </div>
+    </footer>
+
 </div>
 
 </body>
