Profile page again updated

--- a/Assignment-Profile Page/index.html
+++ b/Assignment-Profile Page/index.html
@@ -107,6 +107,13 @@
             </div>
         </div>
     </div>
+
+    <div id="resume" class="collapse">
+        <div class="card text-white bg-success card-body">
+            <h5 class="card-title text-center">Resume</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+    </div>
     <footer id="mainfooter" class="p-4 bg-dark text-white">
         <div class="row">
             <div class="col-md-6">
@@ -118,6 +125,12 @@
     </footer>
 
 </div>
+
+<script>
+    $('.port-item').click(function () {
+        $('.collapse').collapse('hide');
+    })
+</script>
 
 </body>
 
